# Autoaim

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.bat  config.ini  requirements.txt
docs/: dxgi_duplication_cuda_fix.md
include/: TRTInferenceEngine.hpp
models/: download.py  pt2onnx.py
scripts/: infer.ipynb
src/: TRTInferenceEngine.cpp  main.cpp
src/app/: App.cpp  App.h  EntryPoint.cpp  TestCapture.cpp  TestInference.cpp
src/capture/: dxgi_capture.cpp  dxgi_capture.h
src/config/: Config.h
src/controller/: Controller.cpp  Controller.h
src/detector/: Detector.cpp  Detector.h  TrtEngine.cpp  TrtEngine.h  cuda_preprocess.h
src/detector/cuda/: cuda_preprocess.cu
src/log/: Log.cpp  Log.h
train/: change_fmt.ipynb  check.ipynb  prepare_img.py  to_yolo_fmt.py  train.py
